Fix white space issue. Make simlar as it was before. [#106786566]

--- a/skin/frontend/smartwave/porto/css/custom.css
+++ b/skin/frontend/smartwave/porto/css/custom.css
@@ -14,6 +14,8 @@ a.tooltip-icon{border:1px solid #fff;color:#fff;border-radius:50%;display:block;
 a.tooltip-close{position:absolute;right:10px;top:10px;color:#fff}
 .footer-middle>.container{position:relative}
 
+.top-links-container{padding:5px 0px 6px;}
+
 /* tooltip for demo */
 @-webkit-keyframes tooltip-animation {
   0% {
